src/Test/Fixtures/Good/Arrays/f64ArrayDeclaration.lf
let fs: [f64; 3] = [1.0, 2.0, 3.0];