src/Test/Fixtures/Bad/Arrays/missingSemicolonInArrayTypeDeclaration.lf
let xs : [i32 3] = [1, 2, 3];